--- a/src/pages/blog/How-to-Call-a-Function-Inside-a-React-Component.mdx
+++ b/src/pages/blog/How-to-Call-a-Function-Inside-a-React-Component.mdx
@@ -18,9 +18,9 @@ import CodeBlock from "../../components/CodeHighlighter";
 
     If you're here to find out how to call a function defined within your React component, you've come to the right place. In this article, I'll guide you through the process, providing clear instructions to help you accomplish this task.
 
-    #### How You Call a Function Inside a React Component
+    #### How Do You Call a Function Inside a React Component
 
-    We will define a function that will log to the console "HELLO WORLD".
+    We will define a function that will log to the console "HELLO WORLD" inside a react child component.
 
     ( 1. ) Import the `useRef` hook from React in the parent component and invoke it.
 
