update: Added more code example.

--- a/src/pages/blog/How-to-Call-a-Function-Inside-a-React-Component.mdx
+++ b/src/pages/blog/How-to-Call-a-Function-Inside-a-React-Component.mdx
@@ -27,6 +27,11 @@ import CodeBlock from "../../components/CodeHighlighter";
     ```js
     import { useRef } from 'react'
 
+     function ParentComponent() {
+        const childRef = useRef(null);
+        
+        // ...
+    }
     ```
     <br />
 
