chore: Article 3 clean up.

--- a/src/pages/blog/How-to-Implement-Protected-Route-in-NextJS.mdx
+++ b/src/pages/blog/How-to-Implement-Protected-Route-in-NextJS.mdx
@@ -209,7 +209,7 @@ import CodeBlock from "../../components/CodeHighlighter";
     }
 
 
-    // Use Session Hook.
+    // Create and export session hook.
     export const useSession = () => React.useContext(SessionContext)
     ```
     After creating this session provider component, I wrap the entire application with it.
